[workspace]
resolver = "2"

members = [
    "common",
    "deployer",
    "pool",
    "s-token",
    "s-token-interface",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies.soroban-sdk]
version = "0.8.4"

[workspace.dependencies.fixed-point-math]
version = "0.0.2"
