[workspace]
resolver = "2"

members = [
    "common",
    "common-token",
    "deployer",
    "flash-loan-receiver-interface",
    "mocks/price-feed-mock",
    "pool",
    "pool-interface",
    "price-feed-interface",
    "s-token",
    "s-token-interface",
    "debt-token-interface",
    "debt-token",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies.soroban-sdk]
version = "0.9.2"

[workspace.dependencies.soroban-token-sdk]
version = "0.9.2"

[workspace.dependencies.fixed-point-math]
version = "0.0.2"
