[package]
name = "debt-token"
version = "0.1.0"
edition = "2021"
authors = ["eq-lab"]
description = "Debt-token contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "0.8.4" }
debt-token-interface = { path = "../debt-token-interface", version = "0.1.0", package = "debt-token-interface" }
common-token = { path = "../common-token", version = "0.1.0", package = "common-token"}

[dev_dependencies]
soroban-sdk = { version = "0.8.4", features = ["testutils"] }
debt-token-interface={path="../debt-token-interface"}