[package]
name = "pool"
authors = ["eq-lab"]
version = "0.1.0"
edition = "2021"
description = "Liquidity pool contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

s-token-interface = { path = "../s-token-interface", version = "0.1.0", package = "s-token-interface" }
debt-token-interface = { path = "../debt-token-interface", version = "0.1.0", package = "debt-token-interface" }
pool-interface = { path = "../pool-interface", version = "0.1.0", package = "pool-interface" }
price-feed-interface = { path = "../price-feed-interface", version = "0.1.0", package = "price-feed-interface" }
common = { path = "../common", version = "0.1.0", package = "common" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
s-token-interface = { path = "../s-token-interface" }

[features]
testutils = [
    "soroban-sdk/testutils",
    "s-token-interface/testutils",
    "pool-interface/testutils",
]
budget = []
exceeded-limit-fix = []
