[package]
name = "s-token"
authors = ["eq-lab"]
version = "0.1.0"
edition = "2021"
description = "SToken contract"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "0.8.4" }
fixed-point-math = { workspace = true }
s-token-interface={ path="../s-token-interface", version="0.1.0", package="s-token-interface" }
pool-interface={ path="../pool-interface", version="0.1.0", package="pool-interface" }
common = { path = "../common", version="0.1.0", package = "common"}

[dev_dependencies]
soroban-sdk = { version = "0.8.4", features = ["testutils"] }
fixed-point-math = { version="0.0.2" }
s-token-interface={path="../s-token-interface"}