[package]
name = "deployer"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
pool-interface = { path = "../../interfaces/pool-interface", version = "0.1.0", package = "pool-interface" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
