[package]
name = "price-feed-mock"
authors = ["eq-lab"]
version = "0.1.0"
edition = "2021"
description = "SEP-40 oracle mock"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
price-feed-interface = { path = "../../interfaces/price-feed-interface", version = "0.1.0", package = "price-feed-interface" }
common = { path = "../../contracts/common", version = "0.1.0", package = "common" }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
